--- a/index.html
+++ b/index.html
@@ -28,7 +28,20 @@
             </nav>
         </header>
 
-        <section></section>
+        <section>
+            <div id="about-me">
+                <h2>About Me</h2>
+            </div>
+            <div id="my-skills">
+                <h2>My Skills</h2>
+            </div>
+            <div id="projects">
+                <h2>Projects</h2>
+            </div>
+            <div id="contact-me">
+                <h2>Contact Me</h2>
+            </div>
+        </section>
         
     </body>
 </html>
